--- a/sections/banner/banner.html
+++ b/sections/banner/banner.html
@@ -256,7 +256,12 @@
   transform: scale(0.7);
   opacity: 0.6;
   z-index: 1;
-  transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+  transform-style: preserve-3d; /* 启用3D变换 */
+  perspective: 1000px; /* 3D透视距离 */
+  transition: transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1),
+              opacity 0.4s cubic-bezier(0.4, 0, 0.2, 1),
+              box-shadow 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  will-change: transform; /* 性能优化 */
 }
 
 /* 选中状态 - 外围白色边框 */
@@ -294,6 +299,63 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* ✨ 五个位置的倾斜样式 */
+/* 位置0 - 最左侧卡片,向左倾斜12度 */
+.video-card.position-0 {
+  transform: scale(0.7) rotateY(-12deg);
+  opacity: 0.5;
+  box-shadow: -5px 10px 25px rgba(0, 0, 0, 0.4);
+}
+
+/* 位置1 - 左侧卡片,向左倾斜6度 */
+.video-card.position-1 {
+  transform: scale(0.85) rotateY(-6deg);
+  opacity: 0.7;
+  box-shadow: -3px 8px 20px rgba(0, 0, 0, 0.35);
+}
+
+/* 位置2 - 中间卡片,不倾斜(激活状态) */
+.video-card.position-2 {
+  transform: scale(1) rotateY(0deg);
+  opacity: 1;
+  box-shadow: 0 15px 40px rgba(255, 255, 255, 0.2);
+}
+
+/* 位置3 - 右侧卡片,向右倾斜6度 */
+.video-card.position-3 {
+  transform: scale(0.85) rotateY(6deg);
+  opacity: 0.7;
+  box-shadow: 3px 8px 20px rgba(0, 0, 0, 0.35);
+}
+
+/* 位置4 - 最右侧卡片,向右倾斜12度 */
+.video-card.position-4 {
+  transform: scale(0.7) rotateY(12deg);
+  opacity: 0.5;
+  box-shadow: 5px 10px 25px rgba(0, 0, 0, 0.4);
+}
+
+/* 悬停状态 - 增强倾斜效果 */
+.video-card.position-0:hover {
+  transform: scale(0.74) rotateY(-12deg);
+}
+
+.video-card.position-1:hover {
+  transform: scale(0.88) rotateY(-6deg);
+}
+
+.video-card.position-2:hover {
+  transform: scale(1.02) rotateY(0deg);
+}
+
+.video-card.position-3:hover {
+  transform: scale(0.88) rotateY(6deg);
+}
+
+.video-card.position-4:hover {
+  transform: scale(0.74) rotateY(12deg);
 }
 
 /* 5. 响应式样式 */
@@ -522,6 +584,46 @@
     transform: translateY(-50%);
     box-shadow: none;
     background: white;
+  }
+}
+
+/* 移动端禁用倾斜效果 - 保持简洁 */
+@media (max-width: 991px) {
+  /* 重置所有倾斜位置类,移除 rotateY */
+  .video-card.position-0,
+  .video-card.position-1,
+  .video-card.position-2,
+  .video-card.position-3,
+  .video-card.position-4 {
+    transform: scale(0.7) rotateY(0deg) !important; /* 移除倾斜,只保留缩放 */
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3) !important; /* 统一阴影 */
+  }
+
+  .video-card.position-2 {
+    transform: scale(1) rotateY(0deg) !important; /* 中间卡片保持放大 */
+  }
+
+  .video-card.position-1,
+  .video-card.position-3 {
+    transform: scale(0.85) rotateY(0deg) !important; /* 相邻卡片 */
+  }
+
+  /* 悬停状态也重置 */
+  .video-card.position-0:hover,
+  .video-card.position-1:hover,
+  .video-card.position-2:hover,
+  .video-card.position-3:hover,
+  .video-card.position-4:hover {
+    transform: scale(0.74) rotateY(0deg) !important;
+  }
+
+  .video-card.position-2:hover {
+    transform: scale(1.02) rotateY(0deg) !important;
+  }
+
+  .video-card.position-1:hover,
+  .video-card.position-3:hover {
+    transform: scale(0.88) rotateY(0deg) !important;
   }
 }
 
@@ -799,7 +901,7 @@
         card.dataset.cardIndex = idx;
 
         // ✨ 立即计算并应用最终状态，避免闪烁
-        card.classList.remove('active', 'adjacent');
+        card.classList.remove('active', 'adjacent', 'position-0', 'position-1', 'position-2', 'position-3', 'position-4');
         node.classList.remove('gap-small', 'gap-medium', 'gap-large');
 
         // 计算当前节点在可见区域的位置
@@ -815,9 +917,13 @@
           card.classList.add('adjacent');
         }
 
-        // 应用间距类（关键！避免闪烁）
+        // 应用间距类和倾斜位置类（关键！避免闪烁）
         if (position >= visibleStart && position <= visibleEnd) {
           const visiblePosition = position - visibleStart;
+
+          // 应用倾斜位置类 (0-4 对应五个可见卡片)
+          card.classList.add(`position-${visiblePosition}`);
+
           if (visiblePosition === 0 || visiblePosition === VISIBLE_COUNT - 1) {
             node.classList.add('gap-small');
           } else if (visiblePosition === 1 || visiblePosition === VISIBLE_COUNT - 2) {
@@ -901,14 +1007,14 @@
       if (!card) return;
 
       // 修改卡片状态类
-      card.classList.remove('active', 'adjacent');
+      card.classList.remove('active', 'adjacent', 'position-0', 'position-1', 'position-2', 'position-3', 'position-4');
       if (idx === nextCenter) {
         card.classList.add('active');
       } else if (idx === nextCenter - 1 || idx === nextCenter + 1) {
         card.classList.add('adjacent');
       }
 
-      // ✨ 提前计算并应用目标位置的间距类，实现斜向平滑过渡
+      // ✨ 提前计算并应用目标位置的间距类和倾斜类，实现斜向平滑过渡
       wrapper.classList.remove('gap-small', 'gap-medium', 'gap-large');
 
       // 计算卡片在动画后的可见位置
@@ -917,8 +1023,11 @@
         ? currentVisiblePos - 1  // 左滑时，每个卡片向左移动一个位置
         : currentVisiblePos + 1; // 右滑时，每个卡片向右移动一个位置
 
-      // 根据目标位置应用对应的间距类
+      // 根据目标位置应用对应的间距类和倾斜位置类
       if (targetVisiblePos >= 0 && targetVisiblePos < VISIBLE_COUNT) {
+        // 应用倾斜位置类
+        card.classList.add(`position-${targetVisiblePos}`);
+
         if (targetVisiblePos === 0 || targetVisiblePos === VISIBLE_COUNT - 1) {
           wrapper.classList.add('gap-small');
         } else if (targetVisiblePos === 1 || targetVisiblePos === VISIBLE_COUNT - 2) {
@@ -996,20 +1105,23 @@
       if (!card) return;
 
       // 修改卡片状态类
-      card.classList.remove('active', 'adjacent');
+      card.classList.remove('active', 'adjacent', 'position-0', 'position-1', 'position-2', 'position-3', 'position-4');
       if (idx === nextCenter) {
         card.classList.add('active');
       } else if (idx === nextCenter - 1 || idx === nextCenter + 1) {
         card.classList.add('adjacent');
       }
 
-      // 提前应用目标位置的间距类
+      // 提前应用目标位置的间距类和倾斜位置类
       wrapper.classList.remove('gap-small', 'gap-medium', 'gap-large');
 
       const currentVisiblePos = idx - CLONE_COUNT;
       const targetVisiblePos = currentVisiblePos - offset;
 
       if (targetVisiblePos >= 0 && targetVisiblePos < VISIBLE_COUNT) {
+        // 应用倾斜位置类
+        card.classList.add(`position-${targetVisiblePos}`);
+
         if (targetVisiblePos === 0 || targetVisiblePos === VISIBLE_COUNT - 1) {
           wrapper.classList.add('gap-small');
         } else if (targetVisiblePos === 1 || targetVisiblePos === VISIBLE_COUNT - 2) {
