--- a/sections/ai_solutions/ai_solutions.html
+++ b/sections/ai_solutions/ai_solutions.html
@@ -56,12 +56,12 @@
   .ai-solutions-subtitle {
     font-family: 'Sora', sans-serif;
     font-size: clamp(1rem, 1.8vw, 0.75rem);
-    color: var(--color-text-secondary);
+    color: #FFFFFF;
     line-height: 1.8;
     max-width: 50%;
     margin: 0 auto;
     text-align: center;
-    font-weight: 400;
+    font-weight: 300;
   }
 
   /* 图片区域 - 占页面约 7/10 (70vh) */
@@ -182,7 +182,9 @@
     }
 
     .ai-solutions-subtitle {
-      font-size: clamp(0.9rem, 2.5vw, 1.1rem);
+      font-size: clamp(0.95rem, 1.6vw, 1.25rem);
+      color: #FFFFFF;
+      font-weight: 300;
       max-width: 75%;
       padding: 0;
       margin-top: var(--spacing-sm);
@@ -219,7 +221,9 @@
     }
 
     .ai-solutions-subtitle {
-      font-size: clamp(0.85rem, 3vw, 1rem);
+      font-size: clamp(0.95rem, 1.6vw, 1.25rem);
+      color: #FFFFFF;
+      font-weight: 300;
       line-height: 1.7;
       max-width: 85%;
       padding: 0;
@@ -288,7 +292,7 @@
       if (!video) return;
 
       // 视频加载错误处理
-      video.addEventListener('error', function() {
+      video.addEventListener('error', function () {
         console.warn(`Failed to load video: ${this.querySelector('source').src}`);
         this.style.display = 'none';
       });
